--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="RushBase">
 <head>
   <title>Rushbase</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -12,9 +12,9 @@
 		<div class="container-narrow">
 		  <div class="masthead">
 		    <%= render 'layouts/user_header' %>
-		    <h3 class="muted"><%= link_to "RushBase", root_path %></h3> 
+		    <h3 class="muted"><%= link_to "RushBase", root_path %></h3>
 		  </div>
-		  <hr /> 
+		  <hr />
 		</div>
 	</header>
 
