--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@organization) do |f| %>
+<%= bootstrap_form_for(@organization) do |f| %>
   <% if @organization.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@organization.errors.count, "error") %> prohibited this organization from being saved:</h2>
@@ -11,7 +11,10 @@
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= f.text_field :name%>
+    <%= f.text_area :description %>
+
+    <div class="actions">
+      <%= f.submit %>
+    </div>
 <% end %>
