--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,59 +1,83 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f| %>
-<%= devise_error_messages! %>
+<div class="container">
+    <h4 class="well"> Change Your Account Information </h4>
+     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f| %>
+    <%= devise_error_messages! %>
 
-<div class="form-group">
-    <%= f.label :email, class: 'col-sm-2 control-label'  %>
-    <div class="col-sm-6">
-        <%= f.text_field :email, autofocus: true, class: 'form-control'  %>
+    <div class="form-group">
+        <%= f.label :first_name, class: 'col-sm-2 control-label'  %>
+        <div class="col-sm-6">
+            <%= f.text_field :first_name, class: 'form-control'  %>
+        </div>
     </div>
+
+    <div class="form-group">
+        <%= f.label :last_name, class: 'col-sm-2 control-label'  %>
+        <div class="col-sm-6">
+            <%= f.text_field :last_name, class: 'form-control'  %>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <%= f.label :email, class: 'col-sm-2 control-label'  %>
+        <div class="col-sm-6">
+            <%= f.email_field :email, class: 'form-control'  %>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <%= f.label :password, class: 'col-sm-2 control-label' %>
+        <div class="col-sm-6">
+            <%= f.password_field :password, autocomplete: "off",
+                class: 'form-control', placeholder: "only if you want to change password"  %>
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        <%= f.label :password_confirmation, class: 'col-sm-2 control-label' %>
+        <div class="col-sm-6">
+            <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'  %>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <%= f.label :current_password, class: 'col-sm-2 control-label' %>
+        <div class="col-sm-6">
+            <%= f.password_field :current_password, autocomplete: "off",
+            class: 'form-control',placeholder: "required to update" %>
+        </div>
+    </div>
+
+    <h4 class="well"> Change Your profile Info </h4>
+
+    <div class="form-group">
+        <%= f.label :about, class: 'col-sm-2 control-label'  %>
+        <div class="col-sm-6">
+            <%= f.text_area :about, class: 'form-control'  %>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <%= f.label :interests, class: 'col-sm-2 control-label'  %>
+        <div class="col-sm-6">
+            <%= f.text_area :interests, class: 'form-control'  %>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-6">
+            <%= f.submit "Update", class: "btn btn-primary" %>
+        </div>
+    </div>
+
+    <% end %>
+    <div class="row actions">
+        <div class="col-md-6 col-md-offset-2">
+            <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-default btn-xs' %></p>
+            <%= link_to "Back", :back %>
+        </div>
+    </div>
+
 </div>
 
-<div class="form-group">
-    <%= f.label :email, class: 'col-sm-2 control-label'  %>
-    <div class="col-sm-6">
-        <%= f.email_field :email, class: 'form-control'  %>
-    </div>
-</div>
-
-<div class="form-group">
-    <%= f.label :password, class: 'col-sm-2 control-label'  %> <i>(leave blank if you don't want to change it)</i>
-    <div class="col-sm-6">
-        <%= f.password_field :password, autocomplete: "off", class: 'form-control'  %>
-    </div>
-</div>
-
-
-<div class="form-group">
-    <%= f.label :password_confirmation, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-6">
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'  %>
-    </div>
-</div>
-
-<div class="form-group">
-    <%= f.label :current_password, class: 'col-sm-2 control-label' %> <i>(we need your current password to confirm your changes)</i>
-    <div class="col-sm-6">
-        <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
-    </div>
-</div>
-
-<div class="form-group">
-    <div class="col-sm-offset-2 col-sm-6">
-        <%= f.submit "Update", class: "btn btn-primary" %>
-    </div>
-</div>
-
-<div class="form-group">
-    <div class="col-sm-offset-2 col-sm-6">
-        <%= render "devise/shared/links" %>
-    </div>
-</div>
-<% end %>
-
-<h5>Cancel my account</h5>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-default btn-xs' %></p>
-
-<%= link_to "Back", :back %>
