--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -2,12 +2,12 @@
   <div class="row">
     <section class="col-md-8 profile-info">
       <div ="class user-info">
-        <p><%= current_user.first_name%> <%= current_user.last_name %></p>
+        <p><%= current_user.full_name %></p>
 
       </div>
     </section>
     <aside class="col-md-4 aside-info">
-
+      <p>fjdfsfjsklfjskljfkldfsfdf</p>
     </aside>
   </div>
 
