--- a/app/views/user_posts/feed.html.erb
+++ b/app/views/user_posts/feed.html.erb
@@ -1,10 +1,16 @@
-<%= bootstrap_form_for(@user_post, layout: :horizontal, label_col: "col-sm-1", control_col: "col-sm-10") do |f| %>
-  <%= f.text_area :description %>
-  <div class="row col-sm-6 col-sm-offset-1">
-  	<%= f.submit class: "btn btn-primary btn" %>
+<div class="container">
+  <div class="row">
+    <%= bootstrap_form_for(@user_post, layout: :horizontal, label_col: "col-sm-1", control_col: "col-sm-10") do |f| %>
+      <%= f.text_area :description %>
+      <div class="row col-sm-6 col-sm-offset-1">
+        <%= f.submit class: "btn btn-primary btn" %>
+      </div>
+    <% end %>
   </div>
-<% end %>
 
-<div class="posts-wrapper">
-
+  <div class="posts-wrapper">
+    <% @user_posts.each do |post| %>
+      <p><%= post.description%></p>
+    <%end%>
+  </div>
 </div>
