--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
   <div class="row">
+  </div>
+</div>
     <section class="col-md-8 profile-info">
       <div ="class user-info">
         <p><%= current_user.full_name %></p>
@@ -13,9 +15,8 @@
 
   <div class="row">
     <div class=" col-md-8 about-info">
-    <p><%= current_user.about %></p>
-    <p><%= current_user.interests %></p>
-
+      <p><%= current_user.about %></p>
+      <p><%= current_user.interests %></p>
     </div>
   </div>
 
