add paper clip gem and functionality

--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+    <div class"user-avatar"> avatar: <%= image_tag current_user.avatar.url(:thumb), :class => "img-circle"%></div>
   </div>
 </div>
     <section class="col-md-8 profile-info">
