--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,10 @@
      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f| %>
     <%= devise_error_messages! %>
 
+    <div class"text-center"><%= f.label "Change Avatar" %>
+        <div class="file"><%= f.file_field :avatar %></div>
+    </div>
+
     <div class="form-group">
         <%= f.label :first_name, class: 'col-sm-2 control-label'  %>
         <div class="col-sm-6">
