--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,26 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<div class="container">
+  <div class="row">
+    <div class"user-avatar"> avatar: <%= image_tag current_user.avatar.url(:thumb), :class => "img-circle"%></div>
+  </div>
+</div>
+    <section class="col-md-8 profile-info">
+      <div ="class user-info">
+        <p><%= current_user.full_name %></p>
+
+      </div>
+    </section>
+    <aside class="col-md-4 aside-info">
+      <p>fjdfsfjsklfjskljfkldfsfdf</p>
+    </aside>
+  </div>
+
+  <div class="row">
+    <div class=" col-md-8 about-info">
+      <p><%= current_user.about %></p>
+      <p><%= current_user.interests %></p>
+    </div>
+  </div>
+
+</div>
