--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,23 +1,8 @@
-<h1>Listing organizations</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<h1>All Organizations</h1>
+  <ul>
     <% @organizations.each do |organization| %>
-      <tr>
-        <td><%= link_to 'Show', organization %></td>
-        <td><%= link_to 'Edit', edit_organization_path(organization) %></td>
-        <td><%= link_to 'Destroy', organization, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <%= link_to organization.name, organization_path(organization) %></li>
+      <p><%= link_to organization.description, organization_path(organization)%></p>
     <% end %>
-  </tbody>
-</table>
-
+  </ul>
 <br>
-
-<%= link_to 'New Organization', new_organization_path %>
