--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class"user-avatar"> avatar: <%= image_tag current_user.avatar.url(:thumb), :class => "img-circle"%></div>
   </div>
@@ -6,11 +6,10 @@
     <section class="col-md-8 profile-info">
       <div ="class user-info">
         <p><%= current_user.full_name %></p>
-
       </div>
     </section>
     <aside class="col-md-4 aside-info">
-      <p>fjdfsfjsklfjskljfkldfsfdf</p>
+      <p></p>
     </aside>
   </div>
 
@@ -22,3 +21,4 @@
   </div>
 
 </div>
+ -->
