--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,8 +9,11 @@
  * compiled file so the styles you add here take precedence over styles defined in any styles
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
+ *= require_self
+ *= require_tree .
  *
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "rails_bootstrap_forms"
+@import "font-awesome";
+@import "rails_bootstrap_forms";
