--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -1,15 +1,3 @@
-section .profile-info {
-  border:1px solid #e8eaed;
-  background-color: #f9fafc;
-  height:120px;
-  width:200px;
-}
-
-aside .user-info {
-  width:150px;
-  height:100px;
-  border-bottom:5px solid black;
-}
 
 .user-info-section {
   height:360px;
@@ -17,43 +5,65 @@ aside .user-info {
     height: 360px;
     padding:30px;
     margin-right:30px;
-    border:1px solid black;
   }
 }
 .aside-user-menu{
   height: 360px;
-  padding:30px;
+  padding:0px;
   margin-left:30px;
-  background-color: #9098a3;
-  color:#fff;
+  color:#606060;
+  background-color: #E6E7E8;
 
+  a.list-group-item {
+    height:80px;
+    padding:30px 10px 20px 10px;
+    background-color: #E6E7E8;
+    border:none;
+    text-transform:lowercase;
+    margin:0px;
+    font-size:16pt;
+  }
+  a.list-group-item:hover {
+    background-color: #2dbe60;
+    color:#fff;
+    border-radius:10px;
+    text-transform: uppercase;
+    font-size: small;
+  }
 }
 
 .user-name {
-  color:#42ab6a !important;
+  color:#2dbe60 !important;
 }
 
 .user-post-section {
   margin-right: 30px;
-  border:2px solid black;
 }
 
-.aside-user-suggestion{
+.user-suggestion{
   height: 360px;
-  padding:30px;
+  padding:0px;
   margin-left:30px;
   background-color: #67B5D2;
   color:#fff;
-
 }
 
-.aside-course-suggestion {
-  height: 360px;
-  padding:30px;
+.course-suggestion {
+  height:360px;
+  padding:0px;
   margin-left:30px;
   background-color: #52c286;
-  color:#fff;
   margin-top:40px;
+}
+
+aside h3 {
+  margin:0px;
+  padding:10px;
+  color:#fff;
+  border-bottom: 1px solid #fff;
+  text-align:center;
+  font-size: small;
+  text-transform: uppercase;
 }
 
 
