--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,20 @@
     </section>
 
     <aside class="col-md-3 aside-user-menu">
+      <div class="list-group">
+        <a href="#" class="list-group-item">
+        <span class="glyphicon glyphicon-camera"></span> contrubutions <span class="badge">25</span>
+        </a>
+    <a href="#" class="list-group-item">
+        <span class="glyphicon glyphicon-file"></span> Favorites  <span class="badge">145</span>
+    </a>
+    <a href="#" class="list-group-item">
+        <span class="glyphicon glyphicon-music"></span> saved <span class="badge">50</span>
+    </a>
+    <a href="#" class="list-group-item">
+        <span class="glyphicon glyphicon-film"></span> points  <span class="badge">8</span>
+    </a>
+</div>
     </aside>
 
   </div>
@@ -28,12 +42,12 @@
       <% end %>
     </section>
 
-    <aside class="col-md-3 aside-user-suggestion">
-      <p>klncknklnz</p>
+    <aside class="col-md-3 user-suggestion">
+      <h3 class="aside-header">Suggested Users</h3>
     </aside>
 
-    <aside class="col-md-3 aside-course-suggestion">
-      <p>klncknklnz</p>
+    <aside class="col-md-3 course-suggestion">
+      <h3 class="aside-header">Suggested Courses</h3>
     </aside>
 
   </div>
