--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -1,12 +1,71 @@
 
 .user-info-section {
   height:360px;
+
   .left-user-info {
     height: 360px;
-    padding:30px;
+    padding:0px;
     margin-right:30px;
+    //border:1px solid black;
+  }
+
+}
+
+.left-user-info {
+  .main-profile {
+    height:80%;
+  }
+
+  .profile-footer {
+    background: #f9fafc;
+    height:20%;
+    width:100%;
+    border-radius: 0 0 3px 3px;
+  }
+
+  .row {
+    margin-left: 0px;
+  }
+
+  .user-stats {
+    height:100%;
+  }
+
+  .user-stats:hover {
+    color:#2dbe60;
+  }
+
+  .user-stats .stat, a {
+    height:100%;
+    color:#606060;
+    margin-top: 15px;
   }
 }
+
+.user-action-icons .icon {
+  margin-top: 5px;
+  padding: 5px;
+  height:63px;
+  width:63px;
+  background:#fff;
+  text-align: center;
+  border:1px solid #2dbe60;
+  color:#2dbe60;
+}
+
+.user-action-icons .icon:hover {
+  background-color: #2dbe60;
+  color:#fff;
+}
+
+.circle {
+   border-radius: 50%;
+   display: inline-block;
+   margin: 0px 20px 0px 20px;
+   padding:10px;
+
+ }
+
 .aside-user-menu{
   height: 360px;
   padding:0px;
