--- a/app/views/user_posts/_form.html.erb
+++ b/app/views/user_posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user_post) do |f| %>
+<%= bootstrap_form_for(@user_post) do |f| %>
   <% if @user_post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user_post.errors.count, "error") %> prohibited this user_post from being saved:</h2>
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+  <%= f.text_area :description %>
   <div class="actions">
     <%= f.submit %>
   </div>
