--- a/app/assets/stylesheets/user_post.css.scss
+++ b/app/assets/stylesheets/user_post.css.scss
@@ -1,3 +1,24 @@
-.posts-area {
-  padding:10px;
+
+.user-post-section {
+  padding:10px 0px 10px 0px;
+
+  .post-wrapper {
+    border:2px solid #E6E7E8;
+    margin:10px 0px 10px 0px;
+    padding:10px;
+    border-radius: 5px;
+  }
+
+  .post-header {
+    border-bottom:1px solid #E6E7E8;
+    margin-bottom:10px;
+    padding:10px;
+  }
+
+  .post-comments {
+    margin-top:10px;
+    width:100%;
+    padding:10px;
+    background-color:#f5f5f5;
+  }
 }
