--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New user</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
+<div ng-controller="UserPostController">
+  <div ng-repeat="post in user_posts">user</div>
+    <ul>{{post.description}}</ul>
+  <p>I am angular and I'm actually working</p>
+</div>
