--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,6 +30,10 @@
     </div>
 
     <div class="form-group">
+        <%= f.collection_select(:industry_id, Industry.all, :id, :name, class: "pull-right col-md-4 col-sm-6") %>
+    </div>
+
+    <div class="form-group">
         <%= f.label :password, class: 'col-sm-2 control-label' %>
         <div class="col-sm-6">
             <%= f.password_field :password, autocomplete: "off",
@@ -52,6 +56,8 @@
             class: 'form-control',placeholder: "required to update" %>
         </div>
     </div>
+
+    <h4 class="well"> Update location information </h4>
 
     <h4 class="well"> Change Your profile Info </h4>
 
