add models for favorite, follow, upvote. getting users to follow each other(WIP)

--- a/app/assets/stylesheets/user_post.css.scss
+++ b/app/assets/stylesheets/user_post.css.scss
@@ -3,7 +3,7 @@
   padding:10px 0px 10px 0px;
 
   .post-wrapper {
-    border:2px solid #E6E7E8;
+    border:2px solid #ddd;
     margin:10px 0px 10px 0px;
     padding:10px;
     border-radius: 5px;
