--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-
+  <% @user ||= current_user %>
   <div class="row user-info-section">
     <section class="col-md-8 left-user-info text-center">
       <div class="main-profile">
