--- a/app/views/follows/_following.html.erb
+++ b/app/views/follows/_following.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= bootstrap_form_for((user), html: {method: :delete})  do |f| %>
+  <%= bootstrap_form_for((Follow.find_by(follower_id: user)), html: {method: :delete})  do |f| %>
   <%= f.submit "following", class: "btn" %>
   <%end%>
 </div>
