--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -1,9 +1,6 @@
 <div class ="container">
-  <h1> All Users</h1>
+  <h1> <%= @user.following_users.count %> Followers</h1>
   <hr>
-  <div class="row">
-    dsfkldjskfj
-  </div>
   <% @following.each do |user| %>
     <div class="row">
       <div class"user-avatar"><%= image_tag user.avatar.url(:thumb), :class => "img-circle col-md-2 col-sm-4 col-xs-6"%></div>
