--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
         <li><%= user.email %></li>
         <%= link_to 'view', user, class: "btn btn-primary btn-lg" %>
         <div id="<%= user.id %>-follow-form" class="follow-form">
-          <%= render partial: 'follows/follow_form', locals: { user: user } %>
+          <%= render partial: 'follows/follow_form', locals: { user: user } if current_user %>
         </div>
       </ul>
     </div>
