--- a/app/views/layouts/_home_nav.html.erb
+++ b/app/views/layouts/_home_nav.html.erb
@@ -15,10 +15,10 @@
       <ul class="nav navbar-nav navbar-right main-nav-link">
         <li><a href="#">Getting Started</a></li>
         <li><a href="/courses">Courses</a></li>
-        <li><a href="/organizations">organizations</a></li>
+        <li><a href="/organizations">Organizations</a></li>
         <li><a href="/users">Users</a></li>
-        <li><%= link_to "Sign in", new_user_session_path, class: 'btn btn-sm btn-default' %></li>
-        <li><%= link_to "Sign up", new_user_registration_path, class: "btn btn-sm btn-success btn-mini" %></li>
+        <li><%= link_to "Sign In", new_user_session_path, class: 'btn btn-sm btn-default' %></li>
+        <li><%= link_to "Sign Up", new_user_registration_path, class: "btn btn-sm btn-success btn-mini" %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
