--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,11 @@
-<div ng-controller="UserPostController">
-  <div ng-repeat="post in user_posts"></div>
-    <ul>Welcome to Rushbase</ul>
-  <p></p>
+
+<div class="home-content-one">
+  <div class="row">
+    <div class="content text-center">
+      <h1>Connect with like minded learners</h1>
+      <a href="" class="btn btn-success btn-lg"> Explore</a>
+    </div>
+  </div>
 </div>
+
+
