--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,14 +1,17 @@
 body {
-  background-color: #E6E7E8;
+  background-color: #fff;
   margin-bottom: 100px;
 }
 
-section, aside {
-  background-color: #fff;
-  border-radius:10px;
-}
 
 .gi-2x{font-size: 2em;}
 .gi-3x{font-size: 3em;}
 .gi-4x{font-size: 4em;}
 .gi-5x{font-size: 5em;}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
