--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -1,7 +1,6 @@
 
 .user-info-section {
   height:360px;
-
   .left-user-info {
     height: 360px;
     padding:0px;
@@ -65,7 +64,7 @@
  }
 
 .aside-user-menu{
-  height: 360px;
+  height:auto;
   padding:0px;
   margin-left:30px;
   color:#606060;
@@ -98,7 +97,7 @@
 }
 
 .user-suggestion{
-  height: 360px;
+  height: auto;
   padding:0px;
   margin-left:30px;
   background-color: #67B5D2;
@@ -108,7 +107,7 @@
 
 .course-suggestion {
   display: block;
-  height:360px;
+  height:auto;
   padding:0px;
   margin-left:30px;
   position: absolute;
