--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,51 +1,51 @@
 <div class="container">
-    <div class="row">
-        <div class="col-md-8 col-md-offset-3">
-            <h4 class="well well-sm text-center">Please Sign Up below</h4>
-            <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal'}) do |f| %>
-            <%= devise_error_messages! %>
+  <div class="row ">
+    <section class="col-md-8 col-md-offset-2 reg-form panel panel-info">
+      <h4 class=" panel-heading  text-center">Please Sign Up below</h4>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal panel-content'}) do |f| %>
+      <%= devise_error_messages! %>
 
-            <div class="form-group">
-              <%= f.label :first_name, class: "col-sm-2 control-label" %>
-              <div class="col-sm-6">
-                <%= f.email_field :last_name, class: "form-control" %>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <%= f.label :last_name, class: "col-sm-2 control-label" %>
-              <div class="col-sm-6">
-                <%= f.email_field :last_name, class: "form-control" %>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <%= f.label :email, class: "col-sm-2 control-label" %>
-              <div class="col-sm-6">
-                <%= f.email_field :email, class: "form-control" %>
-              </div>
-            </div>
-
-            <div class="form-group">
-                <%= f.label :password, class: "col-sm-2 control-label" %>
-                <div class="col-sm-6">
-                    <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-6">
-                    <%= f.submit "Sign up", class: "btn btn-primary" %>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-6">
-                    <%= render "devise/shared/links" %>
-                </div>
-            </div>
-            <% end %>
+      <div class="form-group">
+        <%= f.label :first_name, class: "col-sm-2 control-label" %>
+        <div class="col-sm-6">
+          <%= f.email_field :last_name, class: "form-control" %>
         </div>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :last_name, class: "col-sm-2 control-label" %>
+        <div class="col-sm-6">
+          <%= f.email_field :last_name, class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :email, class: "col-sm-2 control-label" %>
+        <div class="col-sm-6">
+          <%= f.email_field :email, class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :password, class: "col-sm-2 control-label" %>
+        <div class="col-sm-6">
+          <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-6">
+          <%= f.submit "Sign up", class: "btn btn-primary" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-6">
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+      <% end %>
     </div>
+  </div>
 </div>
 
