--- a/app/views/users/_user_stats.html.erb
+++ b/app/views/users/_user_stats.html.erb
@@ -1,16 +1,13 @@
 <aside class="col-md-3 aside-user-menu">
   <div class="list-group">
     <a href="#" class="list-group-item">
-    <span class="glyphicon glyphicon-camera"></span> contributions <span class="badge">25</span>
+      Organizations <span class="badge">25</span>
     </a>
     <a href="#" class="list-group-item">
-        <span class="glyphicon glyphicon-file"></span> Favorites <span class="badge">145</span>
+       Courses  <span class="badge">145</span>
     </a>
     <a href="#" class="list-group-item">
-        <span class="glyphicon glyphicon-music"></span> saved <span class="badge">50</span>
-    </a>
-    <a href="#" class="list-group-item">
-        <span class="glyphicon glyphicon-film"></span> points <span class="badge">8</span>
+        Discussions <span class="badge">50</span>
     </a>
   </div>
 </aside>
